cmake_minimum_required(VERSION 3.13)
project(EOS_Project)
find_package( OpenCV REQUIRED )
set(CMAKE_CXX_STANDARD 14) 
set(CMAKE_BUILD_TYPE Debug)
set(UTILS_FILES ./src/Utils/src/c/csapp.c ./src/Utils/src/cpp/cvutils.cpp)
include_directories( ${OpenCV_INCLUDE_DIRS} ./src/Utils/include)
add_executable( client ./src/Client/client.c ${UTILS_FILES})
add_executable( server ./src/Server/server.c ${UTILS_FILES})
target_link_libraries( server ${OpenCV_LIBS} )
target_link_libraries( client ${OpenCV_LIBS} )
